# error-paper

./: .gitignore  README.md  pyproject.toml
benchmarks/: README.md
error_paper/: dataset_analysis.ipynb  dataset_generation.ipynb  plots.ipynb  utils.py
error_paper/.ipynb_checkpoints/: dataset_analysis-checkpoint.ipynb  dataset_generation-checkpoint.ipynb
error_paper/holoclean/: export_holoclean_input.py  tool.yaml
error_paper/holoclean/source-datasets/: beers_authentic_dirty.csv
error_paper/holoclean/src/: entrypoint.py
export_data/hospital/: hospital_butter_0.csv  hospital_butter_1.csv  hospital_butter_2.csv  hospital_butter_3.csv  hospital_butter_4.csv  hospital_butter_5.csv  hospital_butter_6.csv  hospital_butter_7.csv  hospital_butter_8.csv  hospital_butter_9.csv  hospital_butter_ecar_0.csv  hospital_butter_ecar_1.csv  hospital_butter_ecar_2.csv  hospital_butter_ecar_3.csv  hospital_butter_ecar_4.csv  hospital_butter_ecar_5.csv  hospital_butter_ecar_6.csv  hospital_butter_ecar_7.csv  hospital_butter_ecar_8.csv  hospital_butter_ecar_9.csv  hospital_butter_v2_0.csv  hospital_butter_v2_1.csv  hospital_butter_v2_2.csv  hospital_butter_v2_3.csv  hospital_butter_v2_4.csv  hospital_butter_v2_5.csv  hospital_butter_v2_6.csv  hospital_butter_v2_7.csv  hospital_butter_v2_8.csv  hospital_butter_v2_9.csv  hospital_replica_0.csv  hospital_replica_1.csv  hospital_replica_2.csv  hospital_replica_3.csv  hospital_replica_4.csv  hospital_replica_5.csv  hospital_replica_6.csv  hospital_replica_7.csv  hospital_replica_8.csv  hospital_replica_9.csv
(+41 files in other folders)
